<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc_ab_share_pack_holo_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sample.sampleworld.UserRegistration" >

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="45dp"
        android:text="@string/user_name" />
    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/name_textview"
        android:layout_alignTop="@id/name_textview"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/mail_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textview"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/email_id" />
    <EditText
        android:id="@+id/mail_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_edittext"
        android:layout_toRightOf="@id/mail_textview"
        android:layout_alignTop="@id/mail_textview"
        android:layout_alignLeft="@id/name_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="textEmailAddress" />
    
    <!-- <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_textview"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/password" />
    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_edittext"
        android:layout_toRightOf="@id/password_textview"
        android:layout_alignTop="@id/password_textview"
        android:layout_alignLeft="@id/name_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="textPassword" />  -->

    <TextView
        android:id="@+id/blood_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_textview"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/blood_group" />
    <EditText
        android:id="@+id/blood_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_edittext"
        android:layout_toRightOf="@id/blood_textview"
        android:layout_alignTop="@id/blood_textview"
        android:layout_alignLeft="@id/name_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="text" />
    
    <!-- <TextView
        android:id="@+id/contact_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/blood_textview"
        android:text="@string/contact" />
    <EditText
        android:id="@+id/contact_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/blood_edittext"
        android:layout_toRightOf="@id/contact_textview"
        android:layout_alignTop="@id/contact_textview"
        android:layout_alignLeft="@id/name_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="text|phone" />  -->
    
    <TextView
        android:id="@+id/address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/blood_textview"
        android:text="@string/address" />
    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/blood_edittext"
        android:layout_toRightOf="@id/address_textview"
        android:layout_alignTop="@id/address_textview"
        android:layout_alignLeft="@id/name_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="textPostalAddress" />
    
    <TextView
        android:id="@+id/dob_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/address_textview"
        android:text="@string/dob" />
    
    <EditText
        android:id="@+id/dob_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_edittext"
        android:layout_toRightOf="@id/dob_textview"
        android:layout_alignTop="@id/dob_textview"
        android:layout_alignLeft="@id/name_edittext"
        android:background="@drawable/abc_ab_bottom_solid_light_holo"
        android:inputType="text|date" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:layout_marginBottom="78dp"
        android:text="@string/register" />

    <!-- <CalendarView
        android:id="@+id/dob_calview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_edittext"
        android:layout_alignTop="@id/dob_textview"
        android:layout_alignLeft="@id/name_edittext"
        android:clickable="true"
        android:layout_marginBottom="20dp" /> -->
    
</RelativeLayout>